Improvements for signal tuning